Work on swagger. Right now you have to run > backend@1.0.0 swagger-autogen > node ./swagger.js
Swagger-autogen: [32m Success ✔ [0m in the backend to generate the swagger.json, and then running the server will have swagger up and running.
